--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,9 @@
   package="net.kaoriya.rslog"
   android:versionCode="1"
   android:versionName="1.0">
+
+  <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7" />
+
   <application
     android:label="@string/app_name"
     android:icon="@drawable/ic_launcher">
@@ -16,4 +19,5 @@
       </intent-filter>
     </activity>
   </application>
+
 </manifest>
