--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
   android:versionCode="1"
   android:versionName="1.0">
 
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7" />
 
   <application
